# lemming

./: .gitignore  .prettierignore  Dockerfile  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml  screenshots.yml
docs/: EVALS.md  HOOKS.md
src/lemming/: __init__.py  agent.py  api.py  api_test.py  cli.py  cli_test.py  conftest.py  core.py  hooks.py  hooks_test.py  integration_test.py  main.py  main_test.py  models.py  models_test.py  orchestrator.py  orchestrator_test.py  paths.py  paths_test.py  persistence.py  persistence_test.py  prompts.py  prompts_test.py  providers.py  providers_test.py  readability_tool.py  runner.py  runner_test.py  tasks.py  utils.py
src/lemming/api/: __init__.py  auth.py  auth_test.py  config.py  config_test.py  conftest.py  context.py  context_test.py  directories.py  directories_test.py  files.py  files_test.py  hooks.py  hooks_test.py  logging.py  logging_test.py  loop.py  loop_test.py  main.py  main_test.py  tasks.py  tasks_test.py
src/lemming/cli/: __init__.py  config.py  config_test.py  context.py  context_test.py  goal.py  goal_test.py  hooks.py  hooks_test.py  main.py  main_test.py  operations.py  operations_test.py  outcomes.py  outcomes_test.py  progress.py  progress_test.py  readability.py  readability_cli.py  readability_cli_test.py  readability_logic.py  readability_logic_test.py  tasks.py  tasks_test.py
src/lemming/evals/: __init__.py  __main__.py  cli.py  cli_test.py  container.py  container_test.py  fixtures.py  fixtures_test.py  harness.py  harness_test.py  readability.py  readability_test.py  roadmap.py  roadmap_test.py  scenarios.py  scenarios_test.py  suites.py  trial.py  trial_test.py
src/lemming/guides/: jsguide.md  pyguide.md  style.md
src/lemming/prompts/: reviewer.md  taskrunner.md
src/lemming/prompts/hooks/: 50-readability.md  60-testing.md  90-roadmap.md  readability.md  roadmap.md  testing.md
src/lemming/tasks/: __init__.py  lifecycle.py  lifecycle_test.py  operations.py  operations_test.py  outcomes.py  outcomes_test.py  progress.py  progress_test.py  queries.py  queries_test.py
src/lemming/web/: dashboard.spec.js  dashboard.test.js  favicon.js  favicon.spec.js  files.html  index.html  index.js  logs.html  logs.test.js  mancha.js  screenshots.spec.js
tests/: agent_test.py  api_test.py  auto_start_test.py  cancel_test.py  config_test.py  hook_discovery_test.py  hook_lifecycle_test.py  main_test.py  mime_types_test.py  paths_test.py  project_cwd_test.py  providers_test.py  readability_test.py  readability_tool_test.py  run_env_test.py  runner_test.py  task_sorting_test.py  tasks_test.py  test_agent_command.py  test_api_files.py  test_api_tasks.py  test_cancel.py  test_clear.py  test_in_progress.py  test_lemming.py  test_prompts.py  test_quiet.py  test_run.py  test_run_time.py  test_share.py  test_status_sorting.py  test_tasks_location.py  utils_test.py
tests/web/: dashboard.test.js  env.spec.js  favicon.spec.js  files.spec.js  folder_picker.spec.js  logs.test.js  screenshots.spec.js
