[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemming"
version = "0.1.0"
description = "An autonomous, iterative task runner for AI coding agents."
readme = "README.md"
authors = [
    { name = "Lemming Contributors" },
]
license = { text = "MIT" }
requires-python = ">=3.14"
keywords = ["ai", "agents", "automation", "gemini", "claude", "aider"]
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.124.4",
    "pyyaml>=6.0.3",
    "readability",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "httpx>=0.28.1",
    "pytest",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
readability = { git = "https://github.com/owahltinez/readability.git" }

[project.scripts]
lemming = "lemming.main:cli"
