[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemming"
version = "0.1.0"
description = "An autonomous, iterative task runner for AI coding agents."
readme = "README.md"
authors = [
    { name = "Lemming Contributors" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ai", "agents", "automation", "gemini", "claude", "aider"]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.0.0",
    "fastapi>=0.124.4",
    "markdownify>=0.14.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.3",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "httpx>=0.28.1",
    "pytest",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[project.scripts]
lemming = "lemming.main:cli"
readability = "lemming.readability_tool:main"
