[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemming-cli"
version = "0.1.2"
description = "An autonomous, iterative task runner for AI coding agents."
readme = "README.md"
authors = [
    { name = "Lemming Contributors" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ai", "agents", "automation", "antigravity", "claude", "aider"]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.0.0",
    "fastapi>=0.124.4",
    "markdownify>=0.14.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "readability-cli>=0.4.0",
    "requests>=2.32.3",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "httpx>=0.28.1",
    "pytest",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[project.urls]
Homepage = "https://github.com/owahltinez/lemming"
Repository = "https://github.com/owahltinez/lemming"

[project.scripts]
lemming = "lemming.main:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lemming"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "PL"]
ignore = ["PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"*_test.py" = ["D"]
